// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context line component snapshot matches a covis snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="num_articles"
  >
    76
     
    resources and collections
     
    (
    34
     open access)
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Data source: <span class=\\"backlink\\"><a href=\\"data\\" class=\\"underline\\" target=\\"_blank\\" >CoVis database</a></span>",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="timestamp"
  >
    Last updated
    : 
    2020-08-12 02:40:04 UTC
  </span>
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;

exports[`Context line component snapshot matches a linkedcat authorview snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="author_living_dates"
  >
    1791-1863
  </span>
  <span
    className="context_item"
    id="author_bio"
  >
    <a
      href="https://d-nb.info/gnd/100016642"
      id="author_bio_link"
      rel="noreferrer"
      target="_blank"
    >
      Biografie
    </a>
  </span>
  <span
    className="context_item"
    id="num_articles"
  >
    45
     
    open access Dokumente
     
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Quelle: LinkedCat+",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;

exports[`Context line component snapshot matches a linkedcat keywordview snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="num_articles"
  >
    295
     
    open access Dokumente
     
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Quelle: LinkedCat+",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="timespan"
  >
    1 Jan 1847 - 1 Jan 1918
  </span>
  <span
    className="context_item"
    id="document_types"
    onMouseEnter={[Function]}
  >
    <span
      className="context_moreinfo"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Dokumentarten
    </span>
  </span>
   
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;

exports[`Context line component snapshot matches a project website (base low quality) snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="num_articles"
  >
    100
     
    <span
      onMouseEnter={[Function]}
    >
      <span
        className="modifier context_moreinfo"
        id="modifier"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        most relevant
      </span>
       
    </span>
    documents
     
    (
    52
     open access)
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Source: BASE",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="timespan"
  >
    All time
  </span>
  <span
    className="context_item"
    id="document_types"
    onMouseEnter={[Function]}
  >
    <span
      className="context_moreinfo"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Document types
    </span>
  </span>
   
  <span
    className="context_item"
    id="metadata_quality"
    onMouseEnter={[Function]}
  >
    <span
      className="context_moreinfo context_metadata_low"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      low metadata quality
    </span>
  </span>
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;

exports[`Context line component snapshot matches a project website (pubmed high quality) snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="num_articles"
  >
    100
     
    <span
      onMouseEnter={[Function]}
    >
      <span
        className="modifier context_moreinfo"
        id="modifier"
        onBlur={[Function]}
        onClick={null}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        most relevant
      </span>
       
    </span>
    documents
     
    (
    52
     open access)
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Source: PubMed",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="timespan"
  >
    All time
  </span>
  <span
    className="context_item"
    id="document_types"
    onMouseEnter={[Function]}
  >
    <span
      className="context_moreinfo"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      Document types
    </span>
  </span>
   
  <span
    className="context_item"
    id="metadata_quality"
    onMouseEnter={[Function]}
  >
    <span
      className="context_moreinfo context_metadata_high"
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      high metadata quality
    </span>
  </span>
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;

exports[`Context line component snapshot matches a viper snapshot 1`] = `
<p
  id="context"
>
  <span
    className="context_item"
    id="num_articles"
  >
    36
     
    documents
     
    (
    10
     open access)
  </span>
  <span
    className="context_item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Source: OpenAIRE",
      }
    }
    id="source"
  />
  <span
    className="context_item"
    id="context-paper_count"
  >
    36
     
    papers
  </span>
  <span
    className="context_item"
    id="context-dataset_count"
  >
    0
     
    datasets
  </span>
  <span
    className="context_item"
    id="context-funder"
  >
    Funder: 
    EC
  </span>
  <span
    className="context_item"
    id="context-project_runtime"
  >
    2011-2016
  </span>
  <span
    className="context_item"
    id="more-info-link"
  >
    <span
      className="context_moreinfo infolink"
      onClick={[Function]}
    >
      <i
        className="fas fa-info-circle"
      />
       
    </span>
  </span>
</p>
`;
